--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do-List</title>
 </head>
+
 <body>
     
-    <h1>Hello this is a <%= kindofDay %>! </h1> 
+    <h1> <%= kindofDay %></h1>
+    <ul>
+    
+       <% for( var i = 0 ; i < newListItems.length ; i++){ %>
+            <li><%= newListItems[i] %></li>
+       <% } %>
+    </ul>
+    
+    <form class="" actions="/" method="post">
+        <input type="text" name="newItem" >
+        <button type="submit" name="button">Add</button>
+    </form>
+
 </body>
+
 </html>
