--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,23 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do-List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    
-    <h1> <%= kindofDay %></h1>
-    <ul>
-    
-       <% for( var i = 0 ; i < newListItems.length ; i++){ %>
-            <li><%= newListItems[i] %></li>
-       <% } %>
-    </ul>
-    
-    <form class="" actions="/" method="post">
-        <input type="text" name="newItem" >
-        <button type="submit" name="button">Add</button>
-    </form>
+    <div class="box" id="heading">
+        <h1>
+            <%= kindofDay %>
+        </h1>
+    </div>
 
+    <div class="box">
+        <% for( let i=0 ; i < newListItems.length ; i++){ %>
+    
+    <div class="item">
+        
+            <input type="checkbox">
+           <p> <%= newListItems[i] %></p>
+        
+           </div>
+           <% } %>
+        <form class="item" actions="/" method="post">
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+            <button type="submit" name="button">+</button>
+        </form>
+    
+        
+    </div>
+
+   
 </body>
 
 </html>
